correct composer top bar spacing

--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -180,7 +180,6 @@ td.flaggers td {
   .result-message {
     display: inline-block;
     padding-left: 10px;
-    padding-top: 5px;
   }
   .username {
     input[type=text] {
